# 08-estasi-pitagorica-bonci

./: .gitmodules  clean_cache.sh  re_export_16x10.sh  re_export_16x9.sh
src/: Intro.py
src/00-Inizio/Poincaré/: 1-AnnaRicci.py  2-Ilaria.py  3-AnnaBaldini.py  4-Jessica.py
src/01-Pitagora/: 01 - regolePT1.py  RadiazioneCosmica.py  pythagoras_rules.py
src/01-Pitagora/Fractal-SDFs/: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
src/01-Pitagora/Fractal-SDFs/libs/glad/src/: glad.c
src/01-Pitagora/Fractal-SDFs/src/AppGL/OpenGL/: AppOptions.h  glDebug.h
src/01-Pitagora/Fractal-SDFs/src/AppGL/OpenGL/glfw/: App.h
src/01-Pitagora/Fractal-SDFs/src/AppGL/shader/: ComputeShader.h  Shader.cpp  Shader.h
src/01-Pitagora/Fractal-SDFs/src/shadersource/: fragment.frag  mandelbrot.comp  mandelbulb.comp
src/01-Pitagorici/01-Parini/01-PitagoriciPT1/: 02 - regolePT2.py
src/01-Pitagorici/01-Parini/01-PitagoriciPT1/Fractal-SDFs/src/shadersource/: vertex.vert
src/01-Pitagorici/01-Parini/02-PitagoriciPT2/: TempioPaestumDetails.py  TempioPaestumIntro.py
src/01-Pitagorici/01-PitagoriciPT1/Fractal-SDFs/: README.md
src/01-Pitagorici/01-PitagoriciPT1/Fractal-SDFs/src/: MyApp.cpp
src/01-Pitagorici/01-PitagoriciPT1/Fractal-SDFs/src/AppGL/: base.h
src/01-Pitagorici/02-Panterini/: Dimensions.py  EmmaCastelnuovo.py
src/01-Pitagorici/02-Panterini/Dimostrazione/: Pt5.py  Pt7.py
src/01-Pitagorici/02-PitagoriciPT2/: TempioPaestumFourier.py
src/01-Pitagorici/04-Panterini/: Approximations.py  Sqrt2DecimalsNikolas.py  Sqrt2DecimalsPT1.py  Star.py
src/01-Pitagorici/04-Panterini/Dimostrazione/: Pt2.py  Pt3.py  Pt4.py  Pt8.py  Pt9.py
src/01-Pitagorici/05-MonologoIppaso/: BohemianRhapsody.py
src/01-Pitagorici/06-GodsNumber/: CaosCaso.py  bigNumbers.py  cube.py  godsNumber.py  godsNumbers.py  numberOfMoves.py
src/02-Archita/: 4Lettere.py  ArchitaVSTaranto.py  ComparingZeus.py  CosaSuccede.py  Infinitum.py  ScaleAConfronto.py
src/02-Panterini/: Sqrt2DecimalsPT2.py  SquareWithFunnyDiagonal.py
src/02-Panterini/Dimostrazione/: Pt1.py  Pt6.py
src/03-Finale/: AzelCreatoreDiMondi.py  T2.py  T3.py
src/04-Archita/: 4Frasi.py  Catapult.py  HisFace.py  Strategos.py  ZeusAConfronto.py
src/05-Finale/: T1.py  parole.py  ultimaSchermata.py
(+7 files in other folders)
